Replace developed with operated.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
   </div>
   <div class="section">
-    <div class="title">Developed At</div>
+    <div class="title">Operated At</div>
     <div id="company-logos">
       <a href="https://dapp-inc.com/" target="_blank">
         <img src="orgs/dapp.svg" alt="dApp Technology Inc." class="logo" />
