Updated work exp.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
       <a href="https://www.certik.com/" target="_blank">
         <img src="orgs/certik.png" alt="CertiK" class="logo" />
       </a>
+      <a href="https://www.utoronto.ca/" target="_blank">
+        <img src="orgs/uoft.png" alt="University of Toronto" class="logo" />
+      </a>
     </div>
   </div>
   <div id="footer">
