Change 1.0.0a to 0.2.2-beta.

--- a/zodiactail/index.html
+++ b/zodiactail/index.html
@@ -93,24 +93,24 @@
                 </p>
                 <p>
                   <a
-                    href="https://drive.google.com/file/d/13fAg-c5TYeY1b356RXa1-x_kL_3aqGuV/view?usp=drive_link"
-                    >1.0.0a-MacOS (Encrypted with GPG)</a
+                    href="https://drive.google.com/file/d/1t_tcjkXE3n3byDp9-qDdYtDl4hagzy2o/view?usp=drive_link"
+                    >0.2.2-beta-MacOS (Encrypted with GPG)</a
                   >
                 </p>
                 <p>
                   <a
-                    href="https://drive.google.com/file/d/1dTsDg1QV7awglgcvUW_dblb5fwbgx8oS/view?usp=drive_link"
-                    >1.0.0a-Windows (Encrypted with GPG)</a
+                    href="https://drive.google.com/file/d/1coL3XqNIr0RyEf7yiXBq2JXYUxllqzci/view?usp=drive_link"
+                    >0.2.2-beta-Windows (Encrypted with GPG)</a
                   >
                 </p>
                 <p>
-                  <a href="../assets/ZodiacTail-1.0.0a-MacOS.zip.gpg.asc"
-                    >1.0.0a-MacOS Signature</a
+                  <a href="../assets/ZodiacTail-0.2.2-beta-MacOS.zip.gpg.asc"
+                    >0.2.2-beta-MacOS Signature</a
                   >
                 </p>
                 <p>
-                  <a href="../assets/ZodiacTail-1.0.0a-Windows.zip.gpg.asc"
-                    >1.0.0a-Windows Signature</a
+                  <a href="../assets/ZodiacTail-0.2.2-beta-Windows.zip.gpg.asc"
+                    >0.2.2-beta-Windows Signature</a
                   >
                 </p>
               </div>
