--- a/info/index.html
+++ b/info/index.html
@@ -186,7 +186,7 @@
             <div class="addr">
               <a
                 href="https://keys.openpgp.org/search?q=6BDFD428487D50AC40774CB4AC382728823BDAEC"
-                >GPG</a
+                >PGP</a
               >: 6BDFD428487D50AC40774CB4AC382728823BDAEC
             </div>
             <p class="footer-text">
