--- a/zodiactail/index.html
+++ b/zodiactail/index.html
@@ -94,13 +94,13 @@
                 <p>
                   <a
                     href="https://drive.google.com/file/d/1t_tcjkXE3n3byDp9-qDdYtDl4hagzy2o/view?usp=drive_link"
-                    >0.2.2-beta-MacOS (Encrypted with GPG)</a
+                    >0.2.2-beta-MacOS (Encrypted)</a
                   >
                 </p>
                 <p>
                   <a
                     href="https://drive.google.com/file/d/1coL3XqNIr0RyEf7yiXBq2JXYUxllqzci/view?usp=drive_link"
-                    >0.2.2-beta-Windows (Encrypted with GPG)</a
+                    >0.2.2-beta-Windows (Encrypted)</a
                   >
                 </p>
                 <p>
@@ -145,7 +145,7 @@
             <div class="addr">
               <a
                 href="https://keys.openpgp.org/search?q=6BDFD428487D50AC40774CB4AC382728823BDAEC"
-                >GPG</a
+                >PGP</a
               >: 6BDFD428487D50AC40774CB4AC382728823BDAEC
             </div>
             <p class="footer-text">
