Replace download page with itch.io page.

--- a/info/index.html
+++ b/info/index.html
@@ -93,7 +93,7 @@
                   <a href="https://amyli.webflow.io/">Amy Li</a>.
                 </p>
                 <p>
-                  <a href="../zodiactail/">Download Page</a>
+                  <a href="https://zodiactail.itch.io/prologue">itch.io Page</a>
                 </p>
               </div>
             </div>
