--- a/info/index.html
+++ b/info/index.html
@@ -93,7 +93,8 @@
                   <a href="https://amyli.webflow.io/">Amy Li</a>.
                 </p>
                 <p>
-                  <a href="https://zodiactail.itch.io/prologue">itch.io Page</a>
+                  <a href="https://zodiactail.itch.io/prologue">itch.io</a>
+                   <a href="https://zodiactail.github.io/">WebGL</a>
                 </p>
               </div>
             </div>
@@ -129,7 +130,7 @@
                   published in the database.
                 </p>
                 <a href="https://github.com/sit-n-coding/solidguard"
-                  >GitHub Link</a
+                  >GitHub</a
                 >
               </div>
             </div>
@@ -152,7 +153,7 @@
                 </p>
                 <a
                   href="https://www.kaggle.com/code/magichanics/amateur-hour-using-headlines-to-predict-stocks/notebook"
-                  >Kaggle Link</a
+                  >Kaggle</a
                 >
               </div>
             </div>
