Remove index.html.

--- a/arcade/index.html
+++ b/arcade/index.html
@@ -78,7 +78,7 @@
           <div class="games">
             <div class="spaced-title">ARCADE</div>
             <div class="game">
-              <a href="./zodiactail/index.html">
+              <a href="./zodiactail/">
                 <img
                   src="./assets/thumbnails/zodiactail.png"
                   alt="ZodiacTail"
@@ -86,7 +86,7 @@
                 />
               </a>
               <div class="game-text">
-                <a href="./zodiactail/index.html">
+                <a href="./zodiactail/">
                   <b>Zodiac Tail: A Game of Cat and Mouse</b>
                 </a>
                 <p>
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="game">
-              <a href="./slfp/index.html">
+              <a href="./slfp/">
                 <img
                   src="./assets/thumbnails/sl-fighter-platformer.png"
                   alt="ZodiacTail"
@@ -105,7 +105,7 @@
                 />
               </a>
               <div class="game-text">
-                <a href="./slfp/index.html">
+                <a href="./slfp/">
                   <b>sl-fighter-platformer</b>
                 </a>
                 <p>
@@ -116,14 +116,14 @@
               </div>
             </div>
             <div class="game">
-              <a href="./mummyrun/index.html">
+              <a href="./mummyrun/">
                 <img
                   src="./assets/thumbnails/mummyrun.png"
                   alt="ZodiacTail"
                   class="game"
                 />
               </a>
-              <a href="./mummyrun/index.html">
+              <a href="./mummyrun/">
                 <b>Mummy Run</b>
               </a>
               <p>
