--- a/arcade/index.html
+++ b/arcade/index.html
@@ -76,7 +76,7 @@
         </div>
         <div id="body">
           <div class="games">
-            <div class="spaced-title">ARCADE</div>
+            <div class="spaced-title">PC BROWSER ARCADE</div>
             <div class="game">
               <a href="./zodiactail/">
                 <img
