--- a/arcade/index.html
+++ b/arcade/index.html
@@ -99,8 +99,8 @@
             <div class="game">
               <a href="./slfp/">
                 <img
-                  src="./assets/thumbnails/sl-fighter-platformer.png"
-                  alt="ZodiacTail"
+                  src="./assets/thumbnails/slfp.png"
+                  alt="SLFP"
                   class="game"
                 />
               </a>
@@ -119,7 +119,7 @@
               <a href="./mummyrun/">
                 <img
                   src="./assets/thumbnails/mummyrun.png"
-                  alt="ZodiacTail"
+                  alt="MummyRun"
                   class="game"
                 />
               </a>
