Advertise cool game :)

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
             <h1>Jan Garong</h1>
             <p class="links web">
               <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
-              <a href="/blog">Blog</a>&nbsp;&nbsp;
-              <a href="zodiactail">Zodiac Tail (Web)</a>
+              <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
