--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
+                <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
+                <a href="contributions/index.html">Contributions</a>&nbsp;&nbsp;
                 <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
               </p>
             </div>
@@ -111,7 +112,8 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
+              <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
+              <a href="contributions/index.html">Contributions</a>&nbsp;&nbsp;
               <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
