--- a/contributions/index.html
+++ b/contributions/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>
       
-
+<!-- 
       <div class="card web flip-2-ver-left-1-back">
         <div class="card-layout-back wavy-pattern">
           <div class="ribbon tor-pattern web">
@@ -213,7 +213,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
     </div>
   </body>
 </html>
