--- a/contributions/index2.html
+++ b/contributions/index2.html
@@ -60,56 +60,14 @@
 
   <body>
     <div class="card-container">
-      <div class="card mobile flip-2-ver-left-1-front">
+      <div class="card mobile flip-2-ver-left-1">
         <div class="card-layout wavy-pattern">
           <div class="card-title">
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                back
-              </p>
-            </div>
-            <div class="link-icons">
-              <a href="https://linkedin.com/in/jangarong/"
-                ><img src="../assets/icons/linkedin.png" alt="LinkedIn" />
-              </a>
-              <a href="https://github.com/jangarong/">
-                <img src="../assets/icons/github.png" alt="GitHub" />
-              </a>
-              <a href="mailto:jan.garong@alum.utoronto.ca">
-                <img src="../assets/icons/email.svg" alt="Email" />
-              </a>
-            </div>
-          </div>
-          <div class="ribbon tor-pattern mobile">
-            <img src="../assets/magichanics.png" alt="magichanics" />
-          </div>
-          <div class="card-footer">
-            <h2>Developed cybersecurity tools for</h2>
-            <div class="company-list mobile">
-              <a href="https://trendmicro.com">
-                <img
-                  src="../assets/companies/trendmicro.png"
-                  alt="trendmicro"
-                /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
-              </a>
-              <a href="https://certik.com">
-                <img src="../assets/companies/certik.png" alt="certik" />
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card mobile flip-2-ver-left-1-back">
-        <div class="card-layout wavy-pattern">
-          <div class="card-title">
-            <div class="title">
-              <h1>Jan Garong</h1>
-              <p class="links web">
-               front
+                <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
+                <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
               </p>
             </div>
             <div class="link-icons">
@@ -147,7 +105,7 @@
       </div>
 
 
-      <div class="card web flip-2-ver-left-1-back">
+      <div class="card web flip-2-ver-left-1">
         <div class="card-layout wavy-pattern">
           <div class="ribbon tor-pattern web">
             <img src="../assets/magichanics.png" alt="magichanics" />
@@ -202,58 +160,6 @@
       </div>
       
 
-      <div class="card web flip-2-ver-left-1-front">
-        <div class="card-layout-back wavy-pattern">
-          <div class="ribbon tor-pattern web">
-            <img src="../assets/magichanics.png" alt="magichanics" />
-          </div>
-          <div class="card-body">
-            <h1>Jan Garong</h1>
-            <p class="links web">
-              back
-            </p>
-            <h2>Developed Cybersecurity Tools at</h2>
-            <div class="company-list web">
-              <a href="https://trendmicro.com">
-                <img
-                  src="../assets/companies/trendmicro.png"
-                  alt="trendmicro"
-                /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
-              </a>
-              <a href="https://certik.com">
-                <img src="../assets/companies/certik.png" alt="certik" />
-              </a>
-            </div>
-            <div class="social-details">
-              <div class="social-detail">
-                <img src="../assets/icons/linkedin.png" alt="LinkedIn :" />
-                <h2>
-                  <a href="https://linkedin.com/in/jangarong/"
-                    >https://linkedin.com/in/jangarong/</a
-                  >
-                </h2>
-              </div>
-              <div class="social-detail">
-                <img src="../assets/icons/github.png" alt="GitHub :" />
-                <h2>
-                  <a href="https://github.com/jangarong/"
-                    >https://github.com/jangarong/</a
-                  >
-                </h2>
-              </div>
-              <div class="social-detail">
-                <img src="../assets/icons/email.svg" alt="Email :" />
-                <h2>
-                  <a href="mailto:jan.garong@alum.utoronto.ca"
-                    >jan.garong@alum.utoronto.ca</a
-                  >
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
     </div>
   </body>
 </html>
