Add basics for contributions page?

--- a/contributions/index.html
+++ b/contributions/index.html
@@ -12,11 +12,28 @@
       href="../thirdparty/inter.css"
       media="screen"
     />
-    <link rel="stylesheet" type="text/css" href="../css/card.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../css/card.css"
+      media="screen"
+    />
     <link
       rel="stylesheet"
       type="text/css"
       href="../css/global.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../css/big-card.css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../css/items.css"
       media="screen"
     />
     <link
@@ -55,28 +72,102 @@
       href="../css/web-content.css"
       media="screen"
     />
-    <link rel="stylesheet" type="text/css" href="../css/text.css" media="screen" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../css/text.css"
+      media="screen"
+    />
   </head>
 
   <body>
+    <div class="big-card-container">
+      <div class="big-card slide-in-bottom">
+        <div class="big-card-layout">
+          <div class="big-card-body">
+            <div class="items">
+              <div class="item">
+                <img src="../assets/projects/tmes.png" alt="TMES">
+                <div class="item-text">
+                  <h2>Trend Micro Email Security</h2>
+                  <p>
+                    Currently developing backend log features + development
+                    tools for the Email Security product. This product aims to
+                    prevent incoming malicious emails such as those that contain
+                    phishing, ransomware, spam, as well as other protocol
+                    filters like IP reputation, spoofing, etc.
+                  </p>
+                  <p>
+                    <a
+                      href="https://www.trendmicro.com/en_us/business/products/email-security.html"
+                      >Product Page</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="../assets/projects/cylanceguard.png" alt="CylanceGUARD">
+                <div class="item-text">
+                  <h2>Blackberry CylanceMDR</h2>
+                  <p>
+                    An MDR and threat intelligence platform for incoming
+                    malicious events. Monitored on devices with Cylance's AI,
+                    and managed by security analysts available 24/7. Previously
+                    developed microservices used to maintain the data pipeline,
+                    as well as APIs that are used for multi-tenancy and showing
+                    alerts detected on client endpoints.
+                  </p>
+                  <p>
+                    <a
+                      href="https://docs.blackberry.com/en/unified-endpoint-security/blackberry-guard"
+                      >Product Page</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="../assets/projects/skynet.png" alt="CertikSkynet">
+                <div class="item-text">
+                  <h2>CertiK Skynet</h2>
+                  <p>
+                    An all-in-one security analytics platform that gives
+                    insights to a variety of Web3 projects. This includes
+                    on-chain data, visualizations, security features, project
+                    activity, and many more! Worked on developing many of the
+                    widgets, most notably the bug bounty feature.
+                  </p>
+                  <p>
+                    <a href="https://www.certik.com/products/skynet"
+                      >Product Page</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- old cards go below, do not modify! -->
+
     <div class="card-container">
-      <div class="card mobile flip-2-ver-left-1-front">
+      <div class="card mobile rotate-out-2-cw">
         <div class="card-layout wavy-pattern">
           <div class="card-title">
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                back
+                <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+                <a>Zodiac Tail</a>
               </p>
             </div>
             <div class="link-icons">
-              <a href="https://linkedin.com/in/jangarong/"
-                ><img src="../assets/icons/linkedin.png" alt="LinkedIn" />
-              </a>
-              <a href="https://github.com/jangarong/">
+              <a><img src="../assets/icons/linkedin.png" alt="LinkedIn" /> </a>
+              <a>
                 <img src="../assets/icons/github.png" alt="GitHub" />
               </a>
-              <a href="mailto:jan.garong@alum.utoronto.ca">
+              <a>
                 <img src="../assets/icons/email.svg" alt="Email" />
               </a>
             </div>
@@ -87,15 +178,18 @@
           <div class="card-footer">
             <h2>Developed cybersecurity tools for</h2>
             <div class="company-list mobile">
-              <a href="https://trendmicro.com">
+              <a>
                 <img
                   src="../assets/companies/trendmicro.png"
                   alt="trendmicro"
                 /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
+              ><a>
+                <img
+                  src="../assets/companies/blackberry.png"
+                  alt="blackberry"
+                />
               </a>
-              <a href="https://certik.com">
+              <a>
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
@@ -103,51 +197,7 @@
         </div>
       </div>
 
-      <div class="card mobile flip-2-ver-left-1-back">
-        <div class="card-layout wavy-pattern">
-          <div class="card-title">
-            <div class="title">
-              <h1>Jan Garong</h1>
-              <p class="links web">
-               front
-              </p>
-            </div>
-            <div class="link-icons">
-              <a href="https://linkedin.com/in/jangarong/"
-                ><img src="../assets/icons/linkedin.png" alt="LinkedIn" />
-              </a>
-              <a href="https://github.com/jangarong/">
-                <img src="../assets/icons/github.png" alt="GitHub" />
-              </a>
-              <a href="mailto:jan.garong@alum.utoronto.ca">
-                <img src="../assets/icons/email.svg" alt="Email" />
-              </a>
-            </div>
-          </div>
-          <div class="ribbon tor-pattern mobile">
-            <img src="../assets/magichanics.png" alt="magichanics" />
-          </div>
-          <div class="card-footer">
-            <h2>Developed cybersecurity tools for</h2>
-            <div class="company-list mobile">
-              <a href="https://trendmicro.com">
-                <img
-                  src="../assets/companies/trendmicro.png"
-                  alt="trendmicro"
-                /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
-              </a>
-              <a href="https://certik.com">
-                <img src="../assets/companies/certik.png" alt="certik" />
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="card web flip-2-ver-left-1-back">
+      <div class="card web rotate-out-2-cw">
         <div class="card-layout wavy-pattern">
           <div class="ribbon tor-pattern web">
             <img src="../assets/magichanics.png" alt="magichanics" />
@@ -155,19 +205,23 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              front
+              <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+              <a>Zodiac Tail</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
-              <a href="https://trendmicro.com">
+              <a>
                 <img
                   src="../assets/companies/trendmicro.png"
                   alt="trendmicro"
                 /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
+              ><a>
+                <img
+                  src="../assets/companies/blackberry.png"
+                  alt="blackberry"
+                />
               </a>
-              <a href="https://certik.com">
+              <a>
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
@@ -175,85 +229,25 @@
               <div class="social-detail">
                 <img src="../assets/icons/linkedin.png" alt="LinkedIn :" />
                 <h2>
-                  <a href="https://linkedin.com/in/jangarong/"
-                    >https://linkedin.com/in/jangarong/</a
-                  >
+                  <a>https://linkedin.com/in/jangarong/</a>
                 </h2>
               </div>
               <div class="social-detail">
                 <img src="../assets/icons/github.png" alt="GitHub :" />
                 <h2>
-                  <a href="https://github.com/jangarong/"
-                    >https://github.com/jangarong/</a
-                  >
+                  <a>https://github.com/jangarong/</a>
                 </h2>
               </div>
               <div class="social-detail">
                 <img src="../assets/icons/email.svg" alt="Email :" />
                 <h2>
-                  <a href="mailto:jan.garong@alum.utoronto.ca"
-                    >jan.garong@alum.utoronto.ca</a
-                  >
+                  <a>jan.garong@alum.utoronto.ca</a>
                 </h2>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
-
-      <div class="card web flip-2-ver-left-1-front">
-        <div class="card-layout-back wavy-pattern">
-          <div class="ribbon tor-pattern web">
-            <img src="../assets/magichanics.png" alt="magichanics" />
-          </div>
-          <div class="card-body">
-            <h1>Jan Garong</h1>
-            <p class="links web">
-              back
-            </p>
-            <h2>Developed Cybersecurity Tools at</h2>
-            <div class="company-list web">
-              <a href="https://trendmicro.com">
-                <img
-                  src="../assets/companies/trendmicro.png"
-                  alt="trendmicro"
-                /> </a
-              ><a href="https://blackberry.com">
-                <img src="../assets/companies/blackberry.png" alt="blackberry" />
-              </a>
-              <a href="https://certik.com">
-                <img src="../assets/companies/certik.png" alt="certik" />
-              </a>
-            </div>
-            <div class="social-details">
-              <div class="social-detail">
-                <img src="../assets/icons/linkedin.png" alt="LinkedIn :" />
-                <h2>
-                  <a href="https://linkedin.com/in/jangarong/"
-                    >https://linkedin.com/in/jangarong/</a
-                  >
-                </h2>
-              </div>
-              <div class="social-detail">
-                <img src="../assets/icons/github.png" alt="GitHub :" />
-                <h2>
-                  <a href="https://github.com/jangarong/"
-                    >https://github.com/jangarong/</a
-                  >
-                </h2>
-              </div>
-              <div class="social-detail">
-                <img src="../assets/icons/email.svg" alt="Email :" />
-                <h2>
-                  <a href="mailto:jan.garong@alum.utoronto.ca"
-                    >jan.garong@alum.utoronto.ca</a
-                  >
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
     </div>
   </body>
 </html>
