--- a/contributions/index.html
+++ b/contributions/index.html
@@ -90,6 +90,7 @@
                 <img src="../assets/projects/tmes.png" alt="TMES">
                 <div class="item-text">
                   <h2>Trend Micro Email Security</h2>
+                  <p>2024 - Current</p>
                   <p>
                     Currently developing backend log features + development
                     tools for the Email Security product. This product aims to
@@ -109,6 +110,7 @@
                 <img src="../assets/projects/cylanceguard.png" alt="CylanceGUARD">
                 <div class="item-text">
                   <h2>Blackberry CylanceMDR</h2>
+                  <p>2023</p>
                   <p>
                     An MDR and threat intelligence platform for incoming
                     malicious events. Monitored on devices with Cylance's AI,
@@ -129,6 +131,7 @@
                 <img src="../assets/projects/skynet.png" alt="CertikSkynet">
                 <div class="item-text">
                   <h2>CertiK Skynet</h2>
+                  <p>2022</p>
                   <p>
                     An all-in-one security analytics platform that gives
                     insights to a variety of Web3 projects. This includes
