--- a/contributions/index.html
+++ b/contributions/index.html
@@ -83,11 +83,19 @@
   <body>
     <div class="big-card-container">
       <div class="big-card slide-in-bottom">
-        <div class="big-card-layout">
+        <div class="big-card-layout attention-pattern">
+          <div class="big-card-header">
+            <p>
+              <a
+                href="https://keys.openpgp.org/search?q=6BDFD428487D50AC40774CB4AC382728823BDAEC"
+                >PGP</a
+              >: 6BDFD428487D50AC40774CB4AC382728823BDAEC
+            </p>
+          </div>
           <div class="big-card-body">
-            <div class="items">
+            <div class="items tor-pattern">
               <div class="item">
-                <img src="../assets/projects/tmes.png" alt="TMES">
+                <img src="../assets/projects/tmes.png" alt="TMES" />
                 <div class="item-text">
                   <h2>Trend Micro Email Security</h2>
                   <p>2024 - Current</p>
@@ -107,7 +115,10 @@
                 </div>
               </div>
               <div class="item">
-                <img src="../assets/projects/cylanceguard.png" alt="CylanceGUARD">
+                <img
+                  src="../assets/projects/cylanceguard.png"
+                  alt="CylanceGUARD"
+                />
                 <div class="item-text">
                   <h2>Blackberry CylanceMDR</h2>
                   <p>2023</p>
@@ -128,7 +139,7 @@
                 </div>
               </div>
               <div class="item">
-                <img src="../assets/projects/skynet.png" alt="CertikSkynet">
+                <img src="../assets/projects/skynet.png" alt="CertikSkynet" />
                 <div class="item-text">
                   <h2>CertiK Skynet</h2>
                   <p>2022</p>
