Fix some borders.

--- a/contributions/index.html
+++ b/contributions/index.html
@@ -157,6 +157,15 @@
                   </p>
                 </div>
               </div>
+              <div class="item">
+                <div class="item-text">
+                  <p>
+                    <a href="../"
+                      >Go Back</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
