--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   </head>
 
   <body>
+
     <div class="card-container">
+
       <div class="card mobile tilt-in-fwd-tr">
         <div class="card-layout wavy-pattern">
           <div class="card-title">
@@ -67,8 +69,8 @@
               <h1>Jan Garong</h1>
               <p class="links web">
                 <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
-                <a href="contributions/index.html">Contributions</a>&nbsp;&nbsp;
-                <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
+                <a href="contributions">Contributions</a>&nbsp;&nbsp;
+                <a href="projects">Projects</a>
               </p>
             </div>
             <div class="link-icons">
@@ -104,6 +106,7 @@
           </div>
         </div>
       </div>
+
       <div class="card web tilt-in-fwd-tr">
         <div class="card-layout wavy-pattern">
           <div class="ribbon tor-pattern web">
@@ -113,8 +116,8 @@
             <h1>Jan Garong</h1>
             <p class="links web">
               <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
-              <a href="contributions/index.html">Contributions</a>&nbsp;&nbsp;
-              <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
+              <a href="contributions">Contributions</a>&nbsp;&nbsp;
+              <a href="projects">Projects</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
@@ -159,6 +162,8 @@
           </div>
         </div>
       </div>
+
     </div>
+    
   </body>
 </html>
