--- a/projects/index.html
+++ b/projects/index.html
@@ -95,67 +95,70 @@
           <div class="big-card-body">
             <div class="items tor-pattern">
               <div class="item">
-                <img src="../assets/projects/tmes.png" alt="TMES" />
+                <img src="../assets/projects/zodiactail.png" alt="ZodiacTail" />
                 <div class="item-text">
-                  <h2>Trend Micro Email Security</h2>
-                  <p>2024 - Current</p>
+                  <h2>Zodiac Tail: A Tale of Cat and Mouse</h2>
+                  <p>2023 - 2024</p>
                   <p>
-                    Currently developing backend log features + development
-                    tools for the Email Security product. This product aims to
-                    prevent incoming malicious emails such as those that contain
-                    phishing, ransomware, spam, as well as other protocol
-                    filters like IP reputation, spoofing, etc.
+                    A puzzle platformer that's based on the Zodiac animals!
+                    Solve challenging levels with a rat that can time travel and
+                    a cat that can teleport! Co-led development with
+                    <a href="https://amyli.webflow.io/">Amy Li</a>
+                    while working as the lead developer for this game.
+                  </p>
+                  <p>
+                    <a href="https://zodiactail.itch.io/prologue">itch.io</a>&nbsp;
+                    <a href="../zodiactail">WebGL</a>
+                  </p>
+                </div>
+              </div>
+              <div class="item">
+                <img
+                  src="../assets/projects/solidguard.png"
+                  alt="CylanceGUARD"
+                />
+                <div class="item-text">
+                  <h2>SolidGuard</h2>
+                  <p>2021 - 2022</p>
+                  <p>
+                    A security detection tool built for the Ethereum blockchain.
+                    How it works is that clients would subscribe their smart
+                    contracts to be notified or halted when a vulnerability is
+                    discovered in their smart contract. Vulnerabilities are
+                    found through white hackers contributing to the attack
+                    database, and comparing the found vulnerable code with the
+                    client's code.
                   </p>
                   <p>
                     <a
-                      href="https://www.trendmicro.com/en_us/business/products/email-security.html"
-                      >Product Page</a
+                      href="https://github.com/sit-n-coding/solidguard"
+                      >GitHub</a
                     >
                   </p>
                 </div>
               </div>
               <div class="item">
                 <img
-                  src="../assets/projects/cylanceguard.png"
-                  alt="CylanceGUARD"
+                  src="../assets/projects/stockmarket.png"
+                  alt="StockPredictor"
                 />
                 <div class="item-text">
-                  <h2>Blackberry CylanceMDR</h2>
-                  <p>2023</p>
+                  <h2>Amateur Hour: Using Headlines to Predict Stocks</h2>
+                  <p>2019</p>
                   <p>
-                    An MDR and threat intelligence platform for incoming
-                    malicious events. Monitored on devices with Cylance's AI,
-                    and managed by security analysts available 24/7. Previously
-                    developed microservices used to maintain the data pipeline,
-                    as well as APIs that are used for multi-tenancy and showing
-                    alerts detected on client endpoints.
+                    This machine learning model uses headline keywords in stock
+                    market data to predict the outcome of overall stock
+                    performance. This is my entry for the Two Sigma: Using News
+                    to Predict Stock Movements Kaggle competition.
                   </p>
                   <p>
                     <a
-                      href="https://docs.blackberry.com/en/unified-endpoint-security/blackberry-guard"
-                      >Product Page</a
-                    >
-                  </p>
-                </div>
-              </div>
-              <div class="item">
-                <img src="../assets/projects/skynet.png" alt="CertikSkynet" />
-                <div class="item-text">
-                  <h2>CertiK Skynet</h2>
-                  <p>2022</p>
-                  <p>
-                    An all-in-one security analytics platform that gives
-                    insights to a variety of Web3 projects. This includes
-                    on-chain data, visualizations, security features, project
-                    activity, and many more! Worked on developing many of the
-                    widgets, most notably the bug bounty feature.
-                  </p>
-                  <p>
-                    <a href="https://www.certik.com/products/skynet"
-                      >Product Page (Skynet)</a
-                    >&nbsp;&nbsp;
-                    <a href="https://www.certik.com/products/bug-bounty"
-                      >Product Page (Bug Bounty)</a
+                      href="https://www.kaggle.com/code/magichanics/amateur-hour-using-headlines-to-predict-stocks/notebook"
+                      >Kaggle</a
+                    >&nbsp;
+                    <a
+                      href="https://github.com/jangarong/StockMarketPredictions"
+                      >GitHub</a
                     >
                   </p>
                 </div>
@@ -182,9 +185,8 @@
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                <a>Resume</a>&nbsp;&nbsp;
-                <a>Contributions</a>&nbsp;&nbsp;
-                <a>Projects</a>
+                <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+                <a>Zodiac Tail</a>
               </p>
             </div>
             <div class="link-icons">
@@ -230,9 +232,8 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              <a>Resume</a>&nbsp;&nbsp;
-              <a>Contributions</a>&nbsp;&nbsp;
-              <a>Projects</a>
+              <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+              <a>Zodiac Tail</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
