--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="My ordinary website." />
     <meta name="keywords" content="jangarong jan garong" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <link
       rel="stylesheet"
       type="text/css"
