--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
   </head>
 
   <body>
+
     <div class="card-container">
+
       <div class="card mobile tilt-in-fwd-tr">
         <div class="card-layout wavy-pattern">
           <div class="card-title">
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
-                <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
+                <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
+                <a href="contributions">Contributions</a>&nbsp;&nbsp;
+                <a href="projects">Projects</a>
               </p>
             </div>
             <div class="link-icons">
@@ -103,6 +106,7 @@
           </div>
         </div>
       </div>
+
       <div class="card web tilt-in-fwd-tr">
         <div class="card-layout wavy-pattern">
           <div class="ribbon tor-pattern web">
@@ -111,8 +115,9 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              <a href="/resume.pdf">Resume</a>&nbsp;&nbsp;
-              <a href="https://zodiactail.itch.io/prologue">Zodiac Tail</a>
+              <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
+              <a href="contributions">Contributions</a>&nbsp;&nbsp;
+              <a href="projects">Projects</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
@@ -157,6 +162,8 @@
           </div>
         </div>
       </div>
+
     </div>
+    
   </body>
 </html>
