--- a/projects/index.html
+++ b/projects/index.html
@@ -97,7 +97,7 @@
               <div class="item">
                 <img src="../assets/projects/zodiactail.png" alt="ZodiacTail" />
                 <div class="item-text">
-                  <h2>Zodiac Tail: A Tale of Cat and Mouse</h2>
+                  <h2>Zodiac Tail: A Game of Cat and Mouse</h2>
                   <p>2023 - 2024</p>
                   <p>
                     A puzzle platformer that's based on the Zodiac animals!
