--- a/zodiactail/index.html
+++ b/zodiactail/index.html
@@ -8,11 +8,11 @@
     <meta name="keywords" content="jangarong jan garong" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
-    <link rel="stylesheet" href="./css/card-body.css"  media="screen">
-    <link rel="stylesheet" href="./css/card-border.css"  media="screen">
-    <link rel="stylesheet" href="./css/card.css"  media="screen">
-    <link rel="stylesheet" href="./css/global.css"  media="screen">
-    <link rel="stylesheet" href="./css/card-icon.css"  media="screen">
+    <link rel="stylesheet" href="./css/card-body.css" media="screen" />
+    <link rel="stylesheet" href="./css/card-border.css" media="screen" />
+    <link rel="stylesheet" href="./css/card.css" media="screen" />
+    <link rel="stylesheet" href="./css/global.css" media="screen" />
+    <link rel="stylesheet" href="./css/card-icon.css" media="screen" />
   </head>
   <body>
     <div class="card-container">
@@ -24,33 +24,31 @@
           </div>
           <div id="icon-container">
             <a href="../">
-              <img src="./assets/icons/next.png" alt="Flip Card" id="next-icon" />
+              <img
+                src="./assets/icons/next.png"
+                alt="Flip Card"
+                id="next-icon"
+              />
             </a>
           </div>
         </div>
         <div id="body" class="webgame">
           <noscript>This game requires you to enable JavaScript.</noscript>
-          <canvas id="unity-canvas" width=1280 height=720></canvas>
+          <canvas id="unity-canvas" width="1280" height="720"></canvas>
           <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
               <div id="unity-progress-bar-full"></div>
             </div>
           </div>
-          <div id="unity-warning"> </div>
+          <div id="unity-warning"></div>
         </div>
         <div id="footer" class="top-border">
-          <div class="spaced-title">
-            ZODIAC TAIL: A GAME OF CAT AND MOUSE
-          </div>
+          <div class="spaced-title">ZODIAC TAIL: A GAME OF CAT AND MOUSE</div>
           <p>
-            A puzzle platformer that's based on the Zodiac animals! Solve
-            challenging levels with a rat that can time travel and a cat
-            that can teleport! Co-led development with
-            <a href="https://amyli.webflow.io/">Amy Li</a> while working
-            as the lead developer for this game. Please note that this game 
-            is a web experimental version, so some aspects like shaders 
-            may be broken. To play the full game, check it out on 
+            Please note that this game is a web experimental version, so some
+            aspects like shaders may be broken. To play the full game, check it
+            out on
             <a href="https://zodiactail.itch.io/prologue">itch.io</a>!
           </p>
         </div>
@@ -72,15 +70,18 @@
       // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+          warningBanner.style.display = warningBanner.children.length
+            ? "block"
+            : "none";
         }
-        var div = document.createElement('div');
+        var div = document.createElement("div");
         div.innerHTML = msg;
         warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        if (type == "error") div.style = "background: red; padding: 10px;";
         else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
+          if (type == "warning")
+            div.style = "background: yellow; padding: 10px;";
+          setTimeout(function () {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -111,10 +112,11 @@
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
 
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
+        var meta = document.createElement("meta");
+        meta.name = "viewport";
+        meta.content =
+          "width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes";
+        document.getElementsByTagName("head")[0].appendChild(meta);
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
 
@@ -122,7 +124,7 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+        unityShowBanner("WebGL builds are not supported on mobile devices.");
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
@@ -137,14 +139,16 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          // fullscreenButton.onclick = () => {
-          //   unityInstance.SetFullscreen(1);
-          // };
-        }).catch((message) => {
-          alert(message);
-        });
+        })
+          .then((unityInstance) => {
+            loadingBar.style.display = "none";
+            // fullscreenButton.onclick = () => {
+            //   unityInstance.SetFullscreen(1);
+            // };
+          })
+          .catch((message) => {
+            alert(message);
+          });
       };
       document.body.appendChild(script);
     </script>
