--- a/contributions/index.html
+++ b/contributions/index.html
@@ -120,7 +120,7 @@
                   alt="CylanceGUARD"
                 />
                 <div class="item-text">
-                  <h2>Blackberry CylanceMDR</h2>
+                  <h2>BlackBerry CylanceMDR</h2>
                   <p>2023</p>
                   <p>
                     An MDR and threat intelligence platform for incoming
