Fix some naming.

--- a/projects/index.html
+++ b/projects/index.html
@@ -185,7 +185,7 @@
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+                <a>Resume</a>&nbsp;&nbsp; <a>Industry Contributions</a>&nbsp;&nbsp;
                 <a>Zodiac Tail</a>
               </p>
             </div>
@@ -232,7 +232,7 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              <a>Resume</a>&nbsp;&nbsp; <a>Contributions</a>&nbsp;&nbsp;
+              <a>Resume</a>&nbsp;&nbsp; <a>Industry Contributions</a>&nbsp;&nbsp;
               <a>Zodiac Tail</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
