--- a/contributions/index.html
+++ b/contributions/index.html
@@ -183,8 +183,8 @@
               <h1>Jan Garong</h1>
               <p class="links web">
                 <a>Resume</a>&nbsp;&nbsp;
-                <a>Contributions</a>&nbsp;&nbsp;
-                <a>Projects</a>
+                <a>Industry Contributions</a>&nbsp;&nbsp;
+                <a>Personal Projects</a>
               </p>
             </div>
             <div class="link-icons">
@@ -231,8 +231,8 @@
             <h1>Jan Garong</h1>
             <p class="links web">
               <a>Resume</a>&nbsp;&nbsp;
-              <a>Contributions</a>&nbsp;&nbsp;
-              <a>Projects</a>
+              <a>Industry Contributions</a>&nbsp;&nbsp;
+              <a>Personal Projects</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
