Fix links on card.

--- a/projects/index.html
+++ b/projects/index.html
@@ -185,8 +185,9 @@
             <div class="title">
               <h1>Jan Garong</h1>
               <p class="links web">
-                <a>Resume</a>&nbsp;&nbsp; <a>Industry Contributions</a>&nbsp;&nbsp;
-                <a>Zodiac Tail</a>
+                <a>Resume</a>&nbsp;&nbsp;
+                <a>Industry Contributions</a>&nbsp;&nbsp;
+                <a>Personal Projects</a>
               </p>
             </div>
             <div class="link-icons">
