--- a/projects/index.html
+++ b/projects/index.html
@@ -233,8 +233,9 @@
           <div class="card-body">
             <h1>Jan Garong</h1>
             <p class="links web">
-              <a>Resume</a>&nbsp;&nbsp; <a>Industry Contributions</a>&nbsp;&nbsp;
-              <a>Zodiac Tail</a>
+              <a>Resume</a>&nbsp;&nbsp;
+              <a>Industry Contributions</a>&nbsp;&nbsp;
+              <a>Personal Projects</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
