--- a/contributions/index.html
+++ b/contributions/index.html
@@ -267,7 +267,7 @@
               <div class="social-detail">
                 <img src="../assets/icons/email.svg" alt="Email :" />
                 <h2>
-                  <a>jan.garong@alum.utoronto.ca</a>
+                  <a>jan.garong@alumni.utoronto.ca</a>
                 </h2>
               </div>
             </div>
