--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <a href="https://github.com/jangarong/">
                 <img src="assets/icons/github.png" alt="GitHub" />
               </a>
-              <a href="mailto:jan.garong@alum.utoronto.ca">
+              <a href="mailto:jan.garong@alumni.utoronto.ca">
                 <img src="assets/icons/email.svg" alt="Email" />
               </a>
             </div>
@@ -153,8 +153,8 @@
               <div class="social-detail">
                 <img src="assets/icons/email.svg" alt="Email :" />
                 <h2>
-                  <a href="mailto:jan.garong@alum.utoronto.ca"
-                    >jan.garong@alum.utoronto.ca</a
+                  <a href="mailto:jan.garong@alumni.utoronto.ca"
+                    >jan.garong@alumni.utoronto.ca</a
                   >
                 </h2>
               </div>
