--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
           </div>
           <div class="card-footer">
             <h2>Developed cybersecurity tools for</h2>
+            
             <div class="company-list mobile">
+              <a href="https://google.com">
+                <img
+                  src="assets/companies/google.png"
+                  alt="google"
+                />*</a
+              >
               <a href="https://trendmicro.com">
                 <img
                   src="assets/companies/trendmicro.png"
@@ -103,6 +110,8 @@
                 <img src="assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+
+            <p>* = Starting January 2025</p>
           </div>
         </div>
       </div>
@@ -121,6 +130,12 @@
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
+              <a href="https://google.com">
+                <img
+                  src="assets/companies/google.png"
+                  alt="google"
+                />*</a
+              >
               <a href="https://trendmicro.com">
                 <img
                   src="assets/companies/trendmicro.png"
@@ -133,6 +148,7 @@
                 <img src="assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+            <p>* = Starting January 2025</p>
             <div class="social-details">
               <div class="social-detail">
                 <img src="assets/icons/linkedin.png" alt="LinkedIn :" />
