--- a/projects/index.html
+++ b/projects/index.html
@@ -206,6 +206,12 @@
           <div class="card-footer">
             <h2>Developed cybersecurity tools for</h2>
             <div class="company-list mobile">
+              <a href="https://google.com">
+                <img
+                  src="assets/companies/google.png"
+                  alt="google"
+                />*</a
+              >
               <a>
                 <img
                   src="../assets/companies/trendmicro.png"
@@ -239,6 +245,12 @@
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
+              <a href="https://google.com">
+                <img
+                  src="assets/companies/google.png"
+                  alt="google"
+                />*</a
+              >
               <a>
                 <img
                   src="../assets/companies/trendmicro.png"
