fix google path

--- a/contributions/index.html
+++ b/contributions/index.html
@@ -205,7 +205,7 @@
             <div class="company-list mobile">
               <a href="https://google.com">
                 <img
-                  src="assets/companies/google.png"
+                  src="../assets/companies/google.png"
                   alt="google"
                 />*</a
               >
@@ -244,7 +244,7 @@
             <div class="company-list web">
               <a href="https://google.com">
                 <img
-                  src="assets/companies/google.png"
+                  src="../assets/companies/google.png"
                   alt="google"
                 />*</a
               >
