--- a/projects/index.html
+++ b/projects/index.html
@@ -208,7 +208,7 @@
             <div class="company-list mobile">
               <a href="https://google.com">
                 <img
-                  src="assets/companies/google.png"
+                  src="../assets/companies/google.png"
                   alt="google"
                 />*</a
               >
@@ -247,7 +247,7 @@
             <div class="company-list web">
               <a href="https://google.com">
                 <img
-                  src="assets/companies/google.png"
+                  src="../assets/companies/google.png"
                   alt="google"
                 />*</a
               >
