--- a/projects/index.html
+++ b/projects/index.html
@@ -227,6 +227,7 @@
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+            <p>* = Starting January 2025</p>
           </div>
         </div>
       </div>
@@ -266,6 +267,7 @@
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+            <p>* = Starting January 2025</p>
             <div class="social-details">
               <div class="social-detail">
                 <img src="../assets/icons/linkedin.png" alt="LinkedIn :" />
