--- a/contributions/index.html
+++ b/contributions/index.html
@@ -224,6 +224,7 @@
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+            <p>* = Starting January 2025</p>
           </div>
         </div>
       </div>
@@ -263,6 +264,7 @@
                 <img src="../assets/companies/certik.png" alt="certik" />
               </a>
             </div>
+            <p>* = Starting January 2025</p>
             <div class="social-details">
               <div class="social-detail">
                 <img src="../assets/icons/linkedin.png" alt="LinkedIn :" />
